# GeoAgent-App

./: .firebaserc  .gitignore  CLAUDE.md  bitacora.md  build.gradle.kts  context.md  cors.json  firestore.indexes.json  firestore.rules  formateo.md  gradlew  local.properties.example  settings.gradle.kts  storage.rules
.claude/: settings.local.json
.github/workflows/: build-deploy.yml  deploy-api.yml  electron-release.yml
.serena/: project.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
functions/: package-lock.json  package.json  tsconfig.json
functions/src/: index.ts
gradle/: libs.versions.toml
prompts/: INDEX.md  README.md
prompts/2026-05-04/: 150146-execute-plan-task-1.md  150506-execute-plan-task-2.md  151307-execute-plan-task-3.md  151841-execute-plan-task-4.md  155400-execute-plan-task-5.md  _index.md  handoff-protocol.md  prompt-log-system.md  refactor-erp-super-geol.md
scripts/: migrate-to-org-rbac.ts  seed-cmsg-org.ts
supabase/: config.toml
supabase/migrations/: 20260316095517_create_geoagent_schema.sql
tasks/: handoff-2026-05-04-1554.md  handoff-2026-05-04-1605.md  handoff-2026-05-04-2230.md
vercel-deploy/: index.html  vercel.json
web/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
web/apps/api/: Cargo.toml  Dockerfile  fly.toml
web/apps/api/src/: auth.rs  config.rs  error.rs  firestore.rs  main.rs
web/apps/api/src/routes/: drillholes.rs  intervals.rs  lithologies.rs  mod.rs  photos.rs  projects.rs  samples.rs  stations.rs  structural.rs
(+273 files in other folders)
